[package]
edition = "2021"
name = "utilities"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# fluvio = "0.13.1"
# serde_json = "1.0.81"
[dependencies]
async_once = "0"
lazy_static = {version = "1.4", optional = true}

chrono = {version = "0", optional = true}
log = {version = "0"}
serde = {version = "1", features = ["derive"], optional = true}
serde_json = {version = "1", optional = true}
sqlx = {version = "0", features = ["runtime-tokio-native-tls", "postgres"], optional = true}
# futures-lite = "1.11.3"
# bincode = "*"
# clap = {version = "3.2.20", features = ["derive"]}
actix-web = {version = "4", optional = true}
dotenv = "0"
futures = {version = "0", optional = true}
jsonwebtoken = {version = "8", optional = true}
lettre = {version = "0", features = ["tokio1-native-tls"], optional = true}
meilisearch-sdk = {version = "0.22", optional = true}
num = {version = "0", optional = true}
num-derive = {version = "0", optional = true}
redis = {version = "0", features = ["tokio-comp"], optional = true}
redis_encoding_derive = {path = "./redis_encoding_derive"}
regex = {version = "1", optional = true}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true}
utoipa = {version = "2", features = ["actix_extras"], optional = true}
utoipa-swagger-ui = {version = "2", features = ["actix-web"], optional = true}
thiserror = "1.0"

[features]
actix-web = ["dep:actix-web", "json", "response", "jsonwebtoken", "dep:tokio"]
from_primitive = ["dep:num", "dep:num-derive"]
full = ["actix-web", "datetime", "email", "from_primitive", "json", "meilisearch", "pg", "redis", "regex", "response", "openapi"]
datetime = ["dep:chrono"]
# default = ["full"]
email = ["dep:lettre"]
json = ["dep:serde", "dep:serde_json"]
meilisearch = ["dep:meilisearch-sdk", "dep:lazy_static"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
pg = ["dep:sqlx", "dep:lazy_static"]
redis = ["dep:redis", "dep:lazy_static", "futures", "json", "actix-web"]
regex = ["dep:regex"]
response = ["dep:serde", "actix-web"]

