[package]
edition = "2021"
name = "util_error"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", optional = true}
anyhow = "1"
futures = {version = "0", optional = true}
jsonwebtoken = {version = "8", optional = true}
once_cell = {version = "1", optional = true}
redis = {version = "0", features = ["tokio-comp"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_json = {version = "1", optional = true}
sqlx = {version = "0", features = ["runtime-tokio-native-tls"], optional = true}
thiserror = "1"
util_response = {path = "../util_response"}
regex = {version = "1", optional = true}
meilisearch-sdk = {version = "0.22", optional = true}
lettre = {version = "0", features = ["tokio1-native-tls"], optional = true}

[features]
actix-web = ["dep:actix-web", "json", "dep:jsonwebtoken"]
# default = ["full"]
full = ["actix-web", "redis", "postgres","regex","meilisearch","email"]
json = ["dep:serde", "dep:serde_json"]
postgres = ["dep:sqlx", "dep:once_cell"]
redis = ["dep:redis", "dep:once_cell", "dep:futures", "json", "actix-web"]
regex = ["dep:regex"]
meilisearch = ["dep:meilisearch-sdk", "dep:once_cell"]
email = ["dep:lettre", "dep:once_cell"]
