[package]
edition = "2021"
name = "util_fluvio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fluvio = "0"
tokio = {version = "1", features = ["rt"]}
tokio-stream = "0"

[dev-dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time"]}
