[package]
edition = "2021"
name = "util_postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
dotenv = "0.15.0"
log = "0.4.19"
once_cell = "1.18.0"
sqlx = {version = "0", features = ["runtime-tokio-native-tls", "postgres"]}
