[package]
edition = "2021"
name = "util_redis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
redis = {version = "0", features = ["tokio-comp"]}
redis_encoding_derive = {path = "../redis_encoding_derive"}
serde = {version = "1.0.176", features = ["derive"]}
