[package]
edition = "2021"
name = "util_redis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
redis = {version = "0", features = ["tokio-comp"]}
redis_encoding_derive = {git = "https://github.com/yuexclusive/utilities.git"}
serde = {version = "1.0.176", features = ["derive"]}
tokio = {version = "1", features = ["rt"]}
tokio-stream = "0"
util_error = {version = "0", git = "https://github.com/yuexclusive/utilities.git", features = ["redis"]}
