[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["macros", "rt-multi-thread", "time"]}
prost = "*"
tonic = "*"
# tonic-web = "*"

[build-dependencies]
tonic-build = "*"
